syntax = "proto3";
package training;
option go_package = "./;pb";

import "empty.proto";

service FPTPeople {
    rpc CreatePeople(People) returns (People);
    rpc UpdatePeople(People) returns (People);
    rpc FindPeople(FindPeopleRequest) returns (People);
    rpc ListPeoples(ListPeopleRequest) returns (ListPeopleResponse);
    rpc DeletePeople(DeletePeopleRequest) returns (Empty);
}

message People {
    string id = 1;
    string slut = 2;
    string name = 3;
    int64 age = 4;
    string address = 5;
    repeated Contact contacts = 6;
}

message Contact {
    string phone_number = 1;
    string email = 2;
    string fax = 3;
}

message FindPeopleRequest {
    string id = 1;
    string slut = 2;
}

message ListPeopleRequest {
    int64 age = 1;
}

message ListPeopleResponse {
    repeated People peoples = 1;
}

message DeletePeopleRequest {
    string id = 1;
}