syntax = "proto3";
package training;
option go_package = "./;pb";

service FPTPeopleJob {
    rpc AssignPeopleJob(AssignPeopleJobRequest) returns (PeopleJob);
    rpc ListPeopleJob(ListPeopleJobRequest) returns (ListPeopleJobResponse); 
}

message PeopleJob {
    string id = 1;
    string people_id = 2;     
    string people_slut = 3;
    string people_name = 4;
    string job_id = 5;
    string job_name = 6;
    string job_ranking = 7;
    double salary = 8;      
    bool active  = 9;
}

message AssignPeopleJobRequest {
    string people_id = 1;
    string job_id = 2;
    string job_ranking = 3;
    double salary = 4;
    bool active = 5;
}

message ListPeopleJobRequest {
    double salary = 1;
    bool active = 2;
}

message ListPeopleJobResponse {
    repeated PeopleJob people_jobs = 1;
}